# plasma-cursor-eyes

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  dbus_example_runcommand.py  gen_themes_index  install-with-cmake.sh  install.sh  kwin_script  package.sh
.old/kwin_script_js/: CMakeLists.txt
.old/kwin_script_js/package/contents/code/: main.js
.old/kwin_script_js/package/contents/config/: main.xml
.old/kwin_script_js/package/contents/ui/: config.ui
kwin_script_js/: CMakeLists.txt
kwin_script_js/package/: metadata.json
kwin_script_js/package/contents/code/: main.js
kwin_script_qml/: CMakeLists.txt
kwin_script_qml/package/: metadata.json
kwin_script_qml/package/contents/config/: main.xml
kwin_script_qml/package/contents/ui/: config.ui  main.qml
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  DBusFallback.qml  DBusMethodCall.qml  FullRepresentation.qml  ReadFileModel.qml  configDebugging.qml  configGeneral.qml  main.qml
package/contents/ui/code/: utils.js
package/contents/ui/themes/: README  README.md  index.json
package/contents/ui/tools/: getCursorPosition.js  kpackage_install_kwinscript.sh  service.py  toggle_script.sh
package/contents/ui/tools/kwin_script/: CMakeLists.txt
package/contents/ui/tools/kwin_script/package/: metadata.json
package/contents/ui/tools/kwin_script/package/contents/config/: main.xml
package/contents/ui/tools/kwin_script/package/contents/ui/: config.ui  main.qml
